# nurbs

./: CMakeLists.txt  README.md  makefile
src/: BSplineCurve.cpp  BSplineCurve.hpp  Color.hpp  Curve.cpp  Curve.hpp  DeBoor.cpp  DeBoor.hpp  Drawing.cpp  Drawing.hpp  Line.cpp  Line.hpp  Model.cpp  Model.hpp  NurbsSurface.cpp  NurbsSurface.hpp  Point.cpp  Point.hpp  Transform.cpp  Transform.hpp  main.cpp  scene.txt
test/: Transform.cpp
